--- a/src/app/auth-page/login/login.html
+++ b/src/app/auth-page/login/login.html
@@ -1,33 +1,44 @@
-<div class="flex flex-col items-center justify-center p-1 gap-5 w-full h-auto slide-in-down">
-    <div class="flex flex-col gap-1 items-start w-full slide-in-down-2">
-        <label>Correo Electrónico</label>
-        <input
-            type="text"
-            placeholder="Ingrese su correo"
-            class="card w-full p-3 md:h-15 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
-    </div>
-    <div class="flex flex-col gap-1 items-start w-full slide-in-down-2">
-        <label>Contraseña</label>
-        <input
-            type="password"
-            placeholder="Ingrese su contraseña"
-            class="card w-full p-3 md:h-15 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"
-        >
-    </div>
-    <div class="flex items-center justify-between w-full slide-in-down-2">
-        <div class="flex gap-2 justify-start items-center">
-            <input type="checkbox">
-            <p>Recordarme</p>
+<form [formGroup]="form" (ngSubmit)="onSumbit()">
+    <div class="flex flex-col items-center justify-center p-1 gap-5 w-full h-auto slide-in-down">
+        <div class="flex flex-col gap-1 items-start w-full slide-in-down-2">
+            <label for="mail">Correo Electrónico</label>
+            <input type="text" id="mail" placeholder="Ingrese su correo" (click)="resetErrorMessage()"
+                formControlName="mail" required [class.input-invalid]="password?.touched && mail?.invalid"
+                class="card w-full p-3 md:h-15 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"
+            >
+            @if (mail?.touched && mail?.invalid) {
+                <small class="text-red-600 ml-2">El correo es obligatorio</small>
+            }
         </div>
-        <nav>
-            <a routerLink="restorePassw" class="text-green-400">¿Olvidó su contraseña?</a>
-        </nav>
+        <div class="flex flex-col gap-1 items-start w-full slide-in-down-2">
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" placeholder="Ingrese su contraseña" (click)="resetErrorMessage()"
+                formControlName="password" required minlength="8" [class.input-invalid]="password?.touched && password?.invalid"
+                class="card w-full p-3 md:h-15 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"
+            >
+            @if (password?.touched && password?.invalid) {
+                <small class="text-red-600 ml-2">La contraseña es obligatoria y debe tener al menos 8 caracteres</small>
+            }
+        </div>
+        <div class="flex items-center justify-between w-full slide-in-down-2">
+            <div class="flex gap-2 justify-start items-center">
+                <input type="checkbox">
+                <p>Recordarme</p>
+            </div>
+            <nav>
+                <a routerLink="restorePassw" class="text-green-400">¿Olvidó su contraseña?</a>
+            </nav>
+        </div>
+        <button
+            type="submit"
+            [disabled]="!form.valid"
+            class="flex items-start justify-center font-bold w-80 h-auto p-3 rounded-lg lg:rounded-xl
+                    bg-green-400 m-4 slide-in-down-2 card"
+        >
+            Iniciar Sesión
+        </button>
+        <div>
+            <p class="text-red-600">{{mensajeError}}</p>
+        </div>
     </div>
-    <button
-        (click)="goToDashboard()"
-        class="flex items-start justify-center font-bold w-80 h-auto p-3 rounded-lg lg:rounded-xl
-                bg-green-400 m-4 slide-in-down-2 card"
-    >
-        Iniciar Sesión
-    </button>
-</div>
+</form>
