--- a/src/app/auth-page/auth-page.html
+++ b/src/app/auth-page/auth-page.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col md:flex-row w-screen h-full md:items-center md:justify-center">
+<div class="flex flex-col md:flex-row w-screen h-full md:items-center md:justify-center overflow-y-auto">
     <!-- Encabezado del componente auth solo en moviles -->
     <div class="h-1/3 relative overflow-hidden flex gap-5 flex-col justify-end p-4 md:hidden">
         <!-- Imagen de fondo -->
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <div class="h-full md:h-150 flex flex-col p-5 md:p-6 gap-4 md:gap-6 rounded-t-4xl md:rounded-l-2xl md:rounded-none w-full md:w-120 bg-white">
+    <div class="h-full md:h-150 flex flex-col p-5 md:p-6 gap-4 rounded-t-4xl md:rounded-l-2xl md:rounded-none w-full md:w-120 bg-white">
         <div class="hidden md:flex flex-row justify-between items-center">
             <!-- Botón -->
             <button
